[gd_scene load_steps=2 format=3 uid="uid://crxfdgdrmol3q"]

[ext_resource type="Script" path="res://Addons/prototype_neighbours_resolver/pnr.gd" id="1_sn1jp"]

[node name="Prototype Neighbour Resolver" type="VBoxContainer"]
offset_right = 266.0
offset_bottom = 78.0
theme_override_constants/separation = 8
script = ExtResource("1_sn1jp")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Prototypes count"

[node name="PrototypeCount" type="SpinBox" parent="VBoxContainer"]
layout_mode = 2
allow_greater = true

[node name="PrototypeList" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ResolveNeighbours" type="Button" parent="."]
layout_mode = 2
text = "Resolve Neighbours"

[connection signal="value_changed" from="VBoxContainer/PrototypeCount" to="." method="_on_prototype_count_value_changed"]
[connection signal="button_up" from="ResolveNeighbours" to="." method="_on_resolve_neighbours_button_up"]
